--- a/my-toolkits/login_reg_page/reg_page.html
+++ b/my-toolkits/login_reg_page/reg_page.html
@@ -89,16 +89,16 @@
   <div class="section"></div>
   <main>
     <center>
-      <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif" />
+      
       <div class="section"></div>
 
-      <h5 class="indigo-text">Please, login into your account</h5>
+      <h3 class="indigo-text"> SIGN UP  </h3>
       <div class="section"></div>
 
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-          <form class="col s12" action="regis.php" method="POST">
+          <form class="col s12" action="regis.php" method="POST" autocomplete="off" >
             <div class='row'>
               <div class='col s12'>
               </div>
@@ -143,6 +143,25 @@
     <div class="section"></div>
     <div class="section"></div>
   </main>
+
+  <!-- light/dark mode button  -->
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large deep-purple darken-3 hoverable">
+      <i class="large material-icons">brightness_4</i>
+    </a>
+  </div>
+
+  <section class="infomodal">
+    <div id="modal3" class="modal">
+        <div class="modal-content">
+          <h4 id="info-modal-heading">Link Disabled</h4>
+          <p id="info-modal-content">Sorry! The Link you're looking for is currently in development phase. So wait for some time till it comes live!</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+        </div>
+      </div>
+    </section>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
