--- a/my-toolkits/tools/expense_calculator/expense-cal.html
+++ b/my-toolkits/tools/expense_calculator/expense-cal.html
@@ -10,6 +10,8 @@
   <link rel="icon" type="image/x-icon" href="../../assets/icons/favicon.ico">
   <!-- styles import -->
   <link rel="stylesheet" href="expense-style.css">
+
+  <link rel="stylesheet" href="../../css/style.css">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- fonts import -->
