--- a/my-toolkits/tools/pass_gen/pass_gen.html
+++ b/my-toolkits/tools/pass_gen/pass_gen.html
@@ -19,6 +19,7 @@
   <!-- all contents fonts import -->
   <link href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="../../css/style.css">
 
 </head>
 
@@ -191,7 +192,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="../../js/script.js"></script>
   <script src="script.js"></script>
 
 
