--- a/my-toolkits/index.html
+++ b/my-toolkits/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Toolkits</title>
   <!-- favicon here  -->
-  <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
   <!-- styles import -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Compiled and minified CSS -->
@@ -32,7 +32,7 @@
       <nav>
         <div class="nav-wrapper  teal darken-2">
           <a href="/" class="brand-logo">
-            <img src="./assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
+            <img src="assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
             <li><a href="#" onclick="toggleModal();">How to use</a></li>
@@ -182,7 +182,7 @@
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Expense Calculator
               <i class="material-icons right">more_vert</i>
-            </span><p><a href="/tools/expense_calculator/expense-cal.html">Click to open </a></p>
+            </span><p><a href="tools/expense_calculator/expense-cal.html">Click to open </a></p>
 
           </div>
           <div class="card-reveal">
@@ -195,12 +195,12 @@
       <div class="col s12 m6 l3" style="padding: 65px 35px;">
         <div class="card hoverable">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="./assets/gifs/icons8-document.gif">
+            <img class="activator" src="assets/gifs/icons8-document.gif">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Password Generator<i
                 class="material-icons right">more_vert</i></span>
-            <p><a href="/tools/pass_gen/pass_gen.html">Click to open</a></p>
+            <p><a href="tools/pass_gen/pass_gen.html">Click to open</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Password Generator<i class="material-icons right">close</i></span>
@@ -217,7 +217,7 @@
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4">Todo list<i
                 class="material-icons right">more_vert</i></span>
-            <p><a href="/tools/to_do_list/todo-list.html">Click to open</a></p>
+            <p><a href="tools/to_do_list/todo-list.html">Click to open</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Todo list<i class="material-icons right">close</i></span>
