--- a/my-toolkits/tools/to_do_list/todo-list.html
+++ b/my-toolkits/tools/to_do_list/todo-list.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
   <!-- favicon here  -->
-  <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="../../assets/icons/favicon.ico">
   <!-- styles import -->
-  <link rel="stylesheet" href="/tools/to_do_list/todo-list.css">
+  <link rel="stylesheet" href="todo-list.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- fonts import -->
@@ -32,7 +33,7 @@
       <nav>
         <div class="nav-wrapper  teal darken-2">
           <a href="/" class="brand-logo">
-            <img src="/assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
+            <img src="../../assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
             <li><a href="#" onclick="toggleModal();">How to use</a></li>
@@ -208,8 +209,8 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   
-  <script src="/js/script.js"></script>
-  <script src="/tools/to_do_list/todo-list.js"></script>
+  <script src="../../js/script.js"></script>
+  <script src="todo-list.js"></script>
 </body>
 
 </html>
