to do list fully done

--- a/my-toolkits/index.html
+++ b/my-toolkits/index.html
@@ -31,7 +31,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper  teal darken-2">
-          <a href="/" class="brand-logo">
+          <a href="#" class="brand-logo">
             <img src="assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
@@ -43,7 +43,7 @@
             <li><a class="dropdown-trigger hoverable" href="#!" data-target="dropdown1">&nbsp;
                 <i class="material-icons right">more_vert</i></a></li>
             <!-- login button -->
-            <li><a href="#" class="waves-effect waves-light deep-purple darken-3 btn hoverable">
+            <li><a href="login_reg_page/login_page.html" class="waves-effect waves-light deep-purple darken-3 btn hoverable">
                 <i class="material-icons left">account_circle</i>Login/Sign up</a>
             </li>
             <!-- light/dark mode toggle button in nav bar  -->
@@ -66,7 +66,7 @@
     <!-- Here is the Mobile side navbar   -->
     <ul class="sidenav" id="mobile-demo">
       <!-- login button -->
-      <li><a href="#" class="waves-effect waves-light deep-purple darken-3 btn-large z-depth-2">
+      <li><a href="login_reg_page/login_page.html" class="waves-effect waves-light deep-purple darken-3 btn-large z-depth-2">
           <i class="material-icons  left">account_circle</i>Login/Sign Up</a></li>
       <li><a href="#" onclick="toggleModal();">How to use</a></li>
       <li><a href="#">About us</a></li>
