--- a/my-toolkits/tools/expense_calculator/expense-cal.html
+++ b/my-toolkits/tools/expense_calculator/expense-cal.html
@@ -35,11 +35,11 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper  teal darken-2">
-          <a href="/" class="brand-logo">
+          <a href="../../index.html" class="brand-logo">
             <img src="../../assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
-            <li><a href="#">How to use</a></li>
+            <li><a href="#" onclick="toggleModal();">How to use</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">All Featues</a></li>
             <li><a href="#">Favorites</a></li>
