--- a/my-toolkits/tools/to_do_list/todo-list.html
+++ b/my-toolkits/tools/to_do_list/todo-list.html
@@ -32,7 +32,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper  teal darken-2">
-          <a href="/" class="brand-logo">
+          <a href="../../index.html" class="brand-logo">
             <img src="../../assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
@@ -44,7 +44,7 @@
             <li><a class="dropdown-trigger hoverable" href="#!" data-target="dropdown1">&nbsp;
                 <i class="material-icons right">more_vert</i></a></li>
             <!-- login button -->
-            <li><a href="#" class="waves-effect waves-light deep-purple darken-3 btn hoverable">
+            <li><a href="../../login_reg_page/login_page.html" class="waves-effect waves-light deep-purple darken-3 btn hoverable">
                 <i class="material-icons left">account_circle</i>Login/Sign up</a>
             </li>
             <!-- light/dark mode toggle button in nav bar  -->
@@ -108,7 +108,7 @@
   <br>
 
 
-  <!-- creating sample task  -->
+  <!-- creating sample task 
   <div class="white container">
     <hr>
     <ul class="collection with-header z-depth-2">
@@ -117,12 +117,34 @@
       </li>
       <li class="collection-item">
         <i class="material-icons deep-purple-text text-darken-3 left">description</i>
-        <div>Complete all the task
+        <div> Complete all the task
           <a href="#!" class="secondary-content">
-            <i class="material-icons red-text cdel" id="cdelete">delete_forever</i>
+            <i class="material-icons red-text cdel" id=" ">delete_forever</i>
           </a>
         </div>
+        <div class="containerj" >
+        </div>
       </li>
+    </ul>
+  </div> -->
+
+  <!-- creating new task  -->
+  <div class="white container">
+    <hr>
+    <ul class="collection with-header z-depth-2">
+      <li class="collection-header">
+        <h4>All Tasks</h4>
+      </li>
+      <div class="containerj">
+      <li class="collection-item">
+        <i class="material-icons deep-purple-text text-darken-3 left">description</i>
+        <div > Complete all the task
+          <a href="#!" class="secondary-content">
+            <i class="material-icons red-text cdel" id=" ">delete_forever</i>
+          </a>
+        </li>
+        </div>
+      </div>
     </ul>
   </div>
 
@@ -137,8 +159,8 @@
         <h4>Add your Tasks</h4>
         <div class="input-field">
           <i class="material-icons prefix">text_fields</i>
-          <input type="text" id="task_name">
-          <label>Name of the Task</label>
+          <input type="text" id="task_name" class="inputj">
+          <label for="task_name">Name of the Task</label>
         </div>
       </div>
     </div>
