--- a/my-toolkits/login_reg_page/login_page.html
+++ b/my-toolkits/login_reg_page/login_page.html
@@ -31,7 +31,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper  teal darken-2">
-          <a href="/" class="brand-logo">
+          <a href="../index.html" class="brand-logo">
             <img src="../assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
@@ -89,10 +89,9 @@
   <div class="section"></div>
   <main>
     <center>
-      <img class="responsive-img" style="width: 250px;" src="https://i.imgur.com/ax0NCsK.gif" />
       <div class="section"></div>
 
-      <h5 class="indigo-text">Please, login into your account</h5>
+      <h3 class="indigo-text">login into your account</h3>
       <div class="section"></div>
 
       <div class="container">
@@ -107,7 +106,7 @@
             <div class='row'>
               <div class='input-field col s12'>
                 <input class='validate' type='text' name='username' id='username' />
-                <label for='username'>Enter your email</label>
+                <label for='username'>Enter your username</label>
               </div>
             </div>
 
@@ -130,7 +129,7 @@
           </form>
         </div>
       </div>
-      <a href="#!">Create account</a>
+      <a href="reg_page.html">Create account</a>
     </center>
 
     <div class="section"></div>
