--- a/my-toolkits/tools/pass_gen/pass_gen.html
+++ b/my-toolkits/tools/pass_gen/pass_gen.html
@@ -30,7 +30,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper  teal darken-2">
-          <a href="/" class="brand-logo">
+          <a href="../../index.html" class="brand-logo">
             <img src="../../assets/main-logo/Frame 3.png" alt="brand-logo" id="logo"></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul id="nav" class="right hide-on-med-and-down">
