--- a/my-toolkits/login_reg_page/reg_page.html
+++ b/my-toolkits/login_reg_page/reg_page.html
@@ -96,7 +96,7 @@
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-          <form class="col s12" action="regis.php" method="POST" autocomplete="off" >
+          <form class="col s12" action="../backend/regis.php" method="POST" autocomplete="off" >
             <div class='row'>
               <div class='col s12'>
               </div>
