--- a/my-toolkits/tools/to_do_list/todo-list.html
+++ b/my-toolkits/tools/to_do_list/todo-list.html
@@ -195,11 +195,6 @@
   </div>
 </div>
 
-
-
-
-
-
   <!-- modal-content for how to use-->
   <section class="infomodal">
     <div id="modal3" class="modal modal-fixed-footer">
@@ -233,6 +228,11 @@
   
   <script src="../../js/script.js"></script>
   <script src="todo-list.js"></script>
+
+  <script>
+    onload(alert("warning , U are not logged in, your data will be saved locally u cant access it from any other device"));
+  </script>
+
 </body>
 
 </html>
