all done some pages left

--- a/my-toolkits/login_reg_page/reg_page.html
+++ b/my-toolkits/login_reg_page/reg_page.html
@@ -198,7 +198,7 @@
                 window.location.replace("login_page.html");
 
             }else{
-                $('#alert_msg').html('username already created ');
+                $('#alert_msg').html('username or email already created ');
                 $('#alert_msg').css('color','red');
             }
         },
